force-app/main/default/objects/ampi__Objective__c/ampi__Objective__c.object-meta.xml
<CustomObject>
    <description>An objective that has been assigned to a specific project</description>
    <label>Framework Objective</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Project Objective ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>