force-app/main/default/objects/ampi__Objective__c/fields/Add_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Add_Indicator__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/action/quick/ampi__Objective__c.Create_Project_Indicator?objectApiName&amp;recordId=&quot;&amp;CASESAFEID(Id)&amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2Fampi__Project__c%2F&quot;&amp;ampi__Project__c&amp;&quot;%2Fview&quot;, IMAGE(&quot;/resource/SLDS_Add_Icon&quot;, &quot;Add Result Statement&quot;, 30, 30), &quot;_self&quot;)</formula>
    <label>Add Indicator</label>
    <type>Text</type>
</CustomField>