force-app/main/default/objects/ampi__Objective__c/fields/ampi__Deactivated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to determine whether a Project Objective is active and thus whether it should be displayed on the ManageLogframes page</description>
    <inlineHelpText>Check this box if you no longer want to display this Objective in the Framework. All data related to this Objective will be preserved.</inlineHelpText>
    <label>Deactivated?</label>
    <type>Checkbox</type>
</CustomField>