force-app/main/default/objects/ampi__Objective__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Long text field to describe the project objective</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>