force-app/main/default/objects/ampi__Objective__c/fields/ampi__Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Language_1__c</fullName>
    <description>Primary translated version of Description__c.</description>
    <label>Description Language 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>