force-app/main/default/objects/ampi__Objective__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether or not a particular Objective record should be included in IATI. If marked as TRUE, then this Objective will not be printed into the IATI Activity XML.</description>
    <inlineHelpText>Check this box if this information should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>