force-app/main/default/objects/ampi__Objective__c/fields/ampi__IATI_Aggregation_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aggregation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the data in the result set are suitable for aggregation, per the IATI Activity XML standard.</description>
    <label>IATI Aggregation Status</label>
    <type>Checkbox</type>
</CustomField>