force-app/main/default/objects/ampi__Objective__c/fields/ampi__IATI_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Code__c</fullName>
    <description>Text field to store Result code for IATI reporting, based on the vocabulary selected.</description>
    <label>IATI Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>