force-app/main/default/objects/ampi__Objective__c/fields/ampi__IATI_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Result_Type__c</fullName>
    <description>Generate a code based on the Level of the IATI Result (Amp Objective) for IATI reporting.</description>
    <formula>IF(ISBLANK(TEXT(ampi__Level__c)),null,
  CASE(TEXT(ampi__Level__c), 
    &quot;Output&quot;,&quot;1&quot;,
    &quot;Outcome&quot;, &quot;2&quot;,
    &quot;Impact&quot;, &quot;3&quot;,
    &quot;9&quot;
    )
)</formula>
    <label>IATI Result Type</label>
    <type>Text</type>
</CustomField>