force-app/main/default/objects/ampi__Objective__c/fields/ampi__IATI_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Vocabulary__c</fullName>
    <description>A picklist to select results framework vocabulary for IATI Reporting. Currently includes only 1 code (99) that can be used by organisations to define different results frameworks they are using</description>
    <label>IATI Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <label>Reporting Organisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>