force-app/main/default/objects/ampi__Objective__c/fields/ampi__IATI_Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Vocabulary_URI__c</fullName>
    <description>The URI where selected vocabulary is defined. If the vocabulary is 99 (reporting organisation), the URI where this internal vocabulary is defined.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>