force-app/main/default/objects/ampi__Objective__c/fields/ampi__Label__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label__c</fullName>
    <description>Text field to store the Name value of the parent Catalog Objective. This is populated by the Process on the Project Objective (ampi__Objective__c) object and can be manually modified afterwards.</description>
    <label>Objective Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>