force-app/main/default/objects/ampi__Objective__c/fields/ampi__Label_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label_Language_1__c</fullName>
    <description>Primary translated version of Label__c. This value is printed in Label_Translated__c when USER_LANGUAGE_CODE = 1.</description>
    <label>Objective Name Language 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>