force-app/main/default/objects/ampi__Objective__c/fields/ampi__Label_Translated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label_Translated__c</fullName>
    <description>Formula field to return a translated version of Label__c if user is using Salesforce in a different language. Depending on user’s language locale, can return Label__c, Label_Language_1__c, Label_Language_2__c, or Label_Language_3__c. Displayed in ManageLogframes, ManageIndicators, SetTargets, and AddResults.</description>
    <formula>CASE($Label.ampi__USER_LANGUAGE_CODE,
    &apos;1&apos;, BLANKVALUE(ampi__Label_Language_1__c, ampi__Label__c),
    &apos;2&apos;, BLANKVALUE(ampi__Label_Language_2__c, ampi__Label__c),
    &apos;3&apos;, BLANKVALUE(ampi__Label_Language_3__c, ampi__Label__c),
    ampi__Label__c
)</formula>
    <label>Objective Name Translated</label>
    <type>Text</type>
</CustomField>