force-app/main/default/objects/ampi__Objective__c/fields/ampi__Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__Level__c</fullName>
    <description>Picklist field to determine the level of an objective. This is populated by the Process on the Project Objective (ampi__Objective__c) object and can be manually modified afterwards.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>