force-app/main/default/objects/ampi__Objective__c/fields/ampi__Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent catalog objective</description>
    <label>Objective</label>
    <referenceTo>ampi__Catalog_Objective__c</referenceTo>
    <relationshipLabel>Project Objectives</relationshipLabel>
    <relationshipName>Project_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>