force-app/main/default/objects/ampi__Objective__c/fields/ampi__Parent_Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Project_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup to create a hierarchy between objectives within a project, as displayed on ManageLogframes</description>
    <label>Parent Framework Objective</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.ampi__Project__c</field>
            <operation>equals</operation>
            <valueField>ampi__Objective__c.ampi__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Objective__c</referenceTo>
    <relationshipLabel>Child Project Objectives</relationshipLabel>
    <relationshipName>Child_Project_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>