force-app/main/default/objects/ampi__Objective__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to specify the parent project</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Project_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>