force-app/main/default/objects/ampi__Objective__c/fields/ampi__xx_Framework__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field refers to the parent framework</description>
    <label>Framework</label>
    <referenceTo>ampi__xx_Framework__c</referenceTo>
    <relationshipLabel>Framework Objectives</relationshipLabel>
    <relationshipName>Project_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>