force-app/main/default/objects/ampi__Objective__c/fields/ampi__xx_Is_Copy__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Is_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked as true if the Framework Objective is being copied from another Framework Objective as part of the Copy from Another Framework feature.</description>
    <inlineHelpText>If this field is checked, then this Framework Objective is a copy.</inlineHelpText>
    <label>Is Copy?</label>
    <type>Checkbox</type>
</CustomField>