force-app/main/default/objects/ampi__Objective__c/fields/ampi__xx_Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Project_Indicator__c</fullName>
    <description>Long text field to store the comma-separated project indicators related to this objective. This field is populated by the triggers on Project Indicator Objective.</description>
    <label>Project Indicator(s)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>