force-app/main/default/objects/ampi__Objective__c/fields/ampi__xx_Project_Indicator_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Project_Indicator_Language_2__c</fullName>
    <description>Secondary translated version of xx_Project_Indicator__c</description>
    <label>Project Indicator(s) Language 2</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>