force-app/main/default/objects/ampi__Objective__c/fields/ampi__xx_Project_Indicator_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Project_Indicator_Language_3__c</fullName>
    <description>Tertiary translated version of xx_Project_Indicator__c.</description>
    <label>Project Indicator(s) Language 3</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>