force-app/main/default/objects/ampi__Objective__c/fields/Assumptions_and_Risks__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_and_Risks__c</fullName>
    <label>Assumptions &amp; Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>