force-app/main/default/objects/ampi__Objective__c/fields/Concatenated_Label_Definition__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Label_Definition__c</fullName>
    <description>Formula field to concatnate Objective Label and Definition for Result Statement picklist in Create Project Activity Flow.</description>
    <formula>ampi__Label__c &amp; &quot; - &quot; &amp; ampi__Objective__r.ampi__Definition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenated Label Definition</label>
    <type>Text</type>
</CustomField>