force-app/main/default/objects/ampi__Objective__c/fields/Concatenated_Name_RS_Definition__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Name_RS_Definition__c</fullName>
    <formula>&quot;Formula &quot; &amp; Description_Short__c</formula>
    <label>Concatenated Name RS Definition</label>
    <type>Text</type>
</CustomField>