force-app/main/default/objects/ampi__Objective__c/fields/Framework_Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Framework_Is_Locked__c</fullName>
    <formula>ampi__xx_Framework__r.ampi__xx_Framework_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Framework Is Locked</label>
    <type>Checkbox</type>
</CustomField>