force-app/main/default/objects/ampi__Objective__c/fields/Not_Rename__c.field-meta.xml
<CustomField>
    <fullName>Not_Rename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Rename</label>
    <type>Checkbox</type>
</CustomField>