force-app/main/default/objects/ampi__Objective__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <formula>IF(TEXT(ampi__Level__c) = &apos;Output&apos;, (TEXT(ampi__Parent_Project_Objective__r.Order_Number__c) &amp; &quot;.&quot; &amp; TEXT(Order_Number__c)), TEXT(Order_Number__c))</formula>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>