force-app/main/default/objects/ampi__Objective__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>ampi__Project__r.Id</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>