force-app/main/default/objects/ampi__Objective__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>IF(ampi__Project__c = &apos;&apos;, &apos;&apos;, ampi__Project__r.Project_Number_ID__c +  CASE(ampi__Level__c, &apos;Outcome&apos;, &apos;_OC_&apos;  + Order_ID__c, &apos;Output&apos;, &apos;_OP_&apos;  + Order_ID__c,&apos;Impact&apos;, &apos;_IM_&apos;  + Order_ID__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>