force-app/main/default/objects/ampi__Objective__c/recordTypes/YouthCan_Project_Result_Statement.recordType-meta.xml
<RecordType>
    <fullName>YouthCan_Project_Result_Statement</fullName>
    <active>true</active>
    <label>YouthCan! Project Result Statement</label>
</RecordType>