force-app/main/default/objects/ampi__Objective__c/validationRules/Lock_Framework.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Framework</fullName>
    <active>false</active>
    <errorConditionFormula>ampi__xx_Framework__r.ampi__xx_Framework_Locked__c = TRUE</errorConditionFormula>
    <errorMessage>The framework you have chosen may not be edited</errorMessage>
</ValidationRule>