force-app/main/default/objects/ampi__Objective__c/validationRules/Objective_Shouldnt_Have_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Objective_Shouldnt_Have_Order</fullName>
    <active>true</active>
    <description>Prevents users from entering an Order Number value if they are creating/editing a Result Statement at the &quot;Objective&quot; level.</description>
    <errorConditionFormula>AND(
TEXT(ampi__Level__c) &lt;&gt; &apos;Output&apos;,
TEXT(ampi__Level__c) &lt;&gt; &apos;Outcome&apos;,
TEXT(ampi__Level__c) &lt;&gt; &apos;Impact&apos;,
NOT(ISBLANK(Order_Number__c))
)</errorConditionFormula>
    <errorDisplayField>Order_Number__c</errorDisplayField>
    <errorMessage>Only Result Statements at the Output or Outcome level may be assigned an Order Number. Please leave this field blank if you are creating an Objective Result Statement (since there should only be 1 per Project).</errorMessage>
</ValidationRule>