force-app/main/default/objects/ampi__Objective__c/validationRules/Output_must_have_parent_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Output_must_have_parent_Outcome</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(ampi__Level__c, &quot;Output&quot;) &amp;&amp; NOT(ISPICKVAL( ampi__Parent_Project_Objective__r.ampi__Level__c, &quot;Outcome&quot;))</errorConditionFormula>
    <errorDisplayField>ampi__Parent_Project_Objective__c</errorDisplayField>
    <errorMessage>You must associate an Output with a parent Outcome - not any other level.</errorMessage>
</ValidationRule>